feature!: Gradle and dependencies update