@@ -1,13 +1,13 @@
-import org.jetbrains.changelog.date
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    `java-gradle-plugin`
-    `maven-publish`
-    kotlin("jvm") version "1.5.21"
-    id("com.gradle.plugin-publish") version "0.11.0"
-    id("net.researchgate.release") version "2.8.1"
-    id("org.jetbrains.changelog") version "1.3.0"
+    alias(libs.plugins.kotlin)
+    alias(libs.plugins.kover)
+    alias(libs.plugins.pluginPublish)
 }
+
+version = System.getenv("PLUGIN_VERSION") ?: "unspecified"
 
 repositories {
     mavenLocal()
@@ -15,55 +15,47 @@ repositories {
 }
 
 dependencies {
-    implementation(kotlin("stdlib-jdk8"))
-    implementation(kotlin("reflect"))
-    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.12.5")
-    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.12.5")
-    implementation("org.apache.commons:commons-lang3:3.12.0")
-    
-    testImplementation("org.junit-pioneer:junit-pioneer:1.4.2")
-    testImplementation("org.junit.jupiter:junit-jupiter:5.8.0")
-    testImplementation("com.willowtreeapps.assertk:assertk-jvm:0.25")
+    implementation(gradleKotlinDsl())
+    implementation(libs.bundles.compile)
+    testImplementation(libs.bundles.test)
+}
+
+java {
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 tasks {
     test {
+        jvmArgs(
+            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util=ALL-UNNAMED"
+        )
         useJUnitPlatform()
     }
-    "afterReleaseBuild"{
-        dependsOn("publish", "publishPlugins", "patchChangelog")
-    }
-    compileKotlin {
-        kotlinOptions {
-            jvmTarget = "1.8"
+    withType<KotlinCompile> {
+        compilerOptions {
+            jvmTarget = JvmTarget.JVM_17
         }
     }
+
 }
+
 gradlePlugin {
+    website = "https://github.com/PrzemyslawSwiderski/yaml-secrets-gradle-plugin"
+    vcsUrl = "https://github.com/PrzemyslawSwiderski/yaml-secrets-gradle-plugin"
     plugins {
         create("yaml-secrets-gradle-plugin") {
             id = "com.pswidersk.yaml-secrets-plugin"
             implementationClass = "com.pswidersk.gradle.yamlsecrets.YamlSecretsPlugin"
-            displayName = "Gradle plugin to load secret properties from Yaml files. " +
-                    "https://github.com/PrzemyslawSwiderski/yaml-secrets-gradle-plugin"
+            displayName = "Gradle plugin to load secret properties from Yaml files."
+            description = "Gradle plugin to load secret properties from Yaml files."
+            tags = listOf("yaml", "yml", "properties", "secrets")
         }
     }
-}
-
-pluginBundle {
-    website = "https://github.com/PrzemyslawSwiderski/yaml-secrets-gradle-plugin"
-    vcsUrl = "https://github.com/PrzemyslawSwiderski/yaml-secrets-gradle-plugin"
-    description = "Gradle plugin to load secret properties from Yaml files."
-    tags = listOf("yaml", "yml", "properties", "secrets")
 }
 
 publishing {
     repositories {
         mavenLocal()
     }
-}
-
-// Configuring changelog Gradle plugin https://github.com/JetBrains/gradle-changelog-plugin
-changelog {
-    header.set(provider { "[${version.get()}] - ${date()}" })
 }
